Closed Bug 64902 Opened 24 years ago Closed 20 years ago

[FIXr]form popup in iframe appears in wrong place after scroll

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect, P3)

Other
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha5

People

(Reporter: bugzilla, Assigned: bzbarsky)

References

Details

(Keywords: testcase)

Attachments

(8 files)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; SunOS 5.6 sun4u; en-US; m18) Gecko/20010108 BuildID: 2001010821 The dropdown/pulldown/popup bit of a form <select> element in an IFRAME included in another page does not move if the main page is scrolled so that the IFRAME in it is moved. (Does that make sense?) Anyway, I'll attach 2 html files in a mo to explain. First file (test1.html) has a bunch of paragraphs to make the page big enough to enable a scroll bar. It also has a simple form with a <select>, for comparison. It also has an <IFRAME>, which points to the 2nd file (test2.html). This 2nd file just has a simple form with a <SELECT> in it. Reproducible: Always Steps to Reproduce: 1) Load the test1.html file 2) check the position of the 2 dropdown/popup menus (one on this page, one in the iframe) (for comparison) 3) scroll the main window 4) check the position of the 2 dropdown/popup menus now. Actual Results: The dropdown/popup menu in the iframe appears where it did before the page was scrolled. Expected Results: The dropdown/popup menu should appear where the html form element is now (after the scroll) this happens with strict and loose dtds. the w3c validator didn't like the IFRAME in test1.html, but it seems OK to me, according to the spec, and mozilla and IE both display it OK (apart from the moved-menu-on-scroll prob with mozilla)
I tested the reduced testcase out on WinNT and it worked fine. We will have to check it out on Linux to see if it is a Solaris only issue.
I have the same problems with this Linux build: Mozilla/5.0 (X11; N; Linux 2.2.14-5.0 i686), build 2001010906
On reading my initial report, I should probably clarify that it is the part of the popup/menu that appears when you try and select something (i.e. the full list of options) which does not move with the scrolling.
waqar, it appears to be platform or at least unix specific.
Assignee: rods → waqar
I d/l and tried to do what the reporter said but nothing changed after the scrolling. However I am not clear what I am supposed to be seeing change or not change. Reporter could you explain some more and possibly attach a screenshot of what its supposed to look like so I can verify it?
Keywords: testcase
Confirmed Platform: PC OS: Linux 2.2.16 Mozilla Build: 2001011508 Marking NEW.
Status: UNCONFIRMED → NEW
Component: HTML Form Controls → HTMLFrames
Ever confirmed: true
OS: Solaris → All
Hardware: Sun → All
Triage
Status: NEW → ASSIGNED
OS: All → Linux
Priority: -- → P3
Hardware: All → Other
Target Milestone: --- → Future
bug#67661 shows a similar thing in the sidebar
When the main screen has been scrolled, and the form popup/dropdown is appearing in the wrong place, then the right-click menu for the IFRAME also appears lower than it should, away from the cursor. I'll attach a screenshot in a mo
bulk reassigning Waqar's bugs to Don.
Assignee: waqar → dcone
Status: ASSIGNED → NEW
These 5 bugs: bug#53318 bug#64902 bug#67661 bug#86909 bug#129782 all seem very similar to me. Are there any duplicates here? Or any useful information from any of the others that may help any of them get fixed?
This is still happening in latest linux trunk ... I will attach a testcase that's directly viewable w/o having to download seperate pages (this problem occurs on weather.com)
the next attachment will use this one ...
scroll down so that the combo is towards the top of the screen and then click on the dropdown ...
Bug#147806 is very similar, and has a patch
*** Bug 168870 has been marked as a duplicate of this bug. ***
Blocks: 86909
Depends on: 264245
Attached patch FixSplinter Review
Comment on attachment 164238 [details] [diff] [review] Fix Robert, would you review? The key here is that we're using SetBounds(), not Move(), on our kids to prevent extra invalidates. So their cached screen positions are not cleared. I'm not sure how safe it would be to cast the kids to nsWindow (nothing else in this file does it), so I went with clearing the cache in the whole subtree rooted at the window that scrolled.
Attachment #164238 - Flags: superreview?(roc)
Attachment #164238 - Flags: review?(roc)
Attachment #164238 - Flags: superreview?(roc)
Attachment #164238 - Flags: superreview+
Attachment #164238 - Flags: review?(roc)
Attachment #164238 - Flags: review+
Assignee: dcone → bzbarsky
Summary: form popup in iframe appears in wrong place after scroll → [FIXr]form popup in iframe appears in wrong place after scroll
Target Milestone: Future → mozilla1.8alpha5
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: