Invalidate the screen position cache on scroll so popups come up in the right places.  Bug 64902, r+sr=roc